# XRF-analysis

./: CMakeLists.txt  PluginInfo.json
res/: xrf_chart.qrc
res/xrf_chart/: xrf.html  xrf.js
res/xrf_js_libs/: qwebchannel.tools.js
src/: ChartWidget.cpp  ChartWidget.h  EditSubsetAction.cpp  EditSubsetAction.h  EditSubsetsAction.cpp  EditSubsetsAction.h  FunctionWidgetAction.cpp  FunctionWidgetAction.h  GMM.cpp  GMM.h  StatisticsAction.cpp  StatisticsAction.h  Subset.cpp  Subset.h  SubsetModel.cpp  SubsetModel.h  XRFAnalysisPlugin.cpp  XRFAnalysisPlugin.h
